# NESsi

./: .gitignore  AllTestSuiteA.txt  Bus.cpp  Bus.h  CMakeLists.txt  Px2C02PPU.cpp  Px2C02PPU.h  PxCartridge.cpp  main.cpp  main.qml  px6502CPU.cpp  px6502CPU.h  test.cpp  testclass.cpp  testclass.h
.qt/: QtDeploySupport.cmake
.qt/deploy_qml_imports/: deneme.cmake
inc/: Bus.h  Px2C02PPU.h  Px6502CPU.h  PxCartridge.h  testclass.h
inc/mappers/: Mapper000.h  PxMapper.h
inc/registers/: PpuAddressRegister.h  PpuControlRegister.h  PpuMaskRegister.h  PpuStatusRegister.h  Register.h
mappers/: Mapper000.cpp  Mapper000.h  PxMapper.h
src/: Bus.cpp  Px2C02PPU.cpp  Px6502CPU.cpp  PxCartridge.cpp  main.cpp  test.cpp  test2.cpp  testclass.cpp
src/mappers/: Mapper000.cpp  PxMapper.cpp
src/registers/: PpuAddressRegister.cpp  PpuControlRegister.cpp  PpuMaskRegister.cpp  Register.cpp
